argocd-k8s-resources/personal-profile/overlays/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-frontend
  labels:
    app: portfolio-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-frontend
  template:
    metadata:
      labels:
        app: portfolio-frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/jterpstra1/personal-portfolio-frontend:0.0.1
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: ghcr-pull-secret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-backend
  labels:
    app: portfolio-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-backend
  template:
    metadata:
      labels:
        app: portfolio-backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/jterpstra1/personal-portfolio-backend:0.0.2
          ports:
            - containerPort: 4000
      imagePullSecrets:
        - name: ghcr-pull-secret
