argocd-k8s-resources/personal-profile/overlays/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-frontend
spec:
  selector:
    app: portfolio-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: portfolio-backend
spec:
  selector:
    app: portfolio-backend
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
  type: ClusterIP
