argocd-k8s-resources/personal-profile/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: vdgtconsultancy.be
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio-frontend
                port:
                  number: 85
